--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,18 @@ path = "src/tish.rs"
 
 [dependencies]
 anyhow = "1.0.95"
-clap = { version = "4.5.27", features = ["derive"] }
+chrono = "0.4.39"
 dirs = "6.0.0"
 hostname = "0.4.0"
 libc = "0.2.169"
+nix = "0.29.0"
+parking_lot = "0.12.3"
+rustyline = "15.0.0"
+sysinfo = "0.33.1"
+
+tokio = { version = "1.43.0", features = ["full"] }
+clap = { version = "4.5.27", features = ["derive"] }
+
 mlua = { version = "0.10.2", features = [
     "anyhow",
     "async",
@@ -21,8 +29,3 @@ mlua = { version = "0.10.2", features = [
     "send",
     "serialize",
 ] }
-nix = "0.29.0"
-parking_lot = "0.12.3"
-rustyline = "15.0.0"
-sysinfo = "0.33.1"
-tokio = { version = "1.43.0", features = ["full"] }
