--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,21 @@ hostname = "0.4.0"
 libc = "0.2.169"
 nix = "0.29.0"
 parking_lot = "0.12.3"
-rustyline = { version = "15.0.0", features = ["custom-bindings", "with-fuzzy"] }
+regex = "1.11.1"
 sysinfo = "0.33.1"
 
 tokio = { version = "1.43.0", features = ["full"] }
 clap = { version = "4.5.27", features = ["derive"] }
+rustyline = { version = "15.0.0", features = ["custom-bindings", "with-fuzzy"] }
 
-mlua = { version = "0.10.2", features = [
+[dependencies.mlua]
+version = "0.10.2"
+features = [
     "anyhow",
     "async",
     "lua54",
     "macros",
     "send",
+    "vendored",
     "serialize",
-] }
+]
