--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "tish"
-version = "0.3.5"
 edition = "2021"
+version = "0.5.0-pre.0"
+license = "GPL-3.0"
+description = "A tiny, fast shell with not so tiny features"
 
 [[bin]]
 name = "tish"
