--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ sysinfo = "0.33.1"
 
 tokio = { version = "1.43.0", features = ["full"] }
 clap = { version = "4.5.27", features = ["derive"] }
+git2 = { version = "0.20.0", default-features = false }
 rustyline = { version = "15.0.0", features = ["custom-bindings", "with-fuzzy"] }
 
 [dependencies.mlua]
