--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ hostname = "0.4.0"
 libc = "0.2.169"
 nix = "0.29.0"
 parking_lot = "0.12.3"
+pat = "1.0.1"
 regex = "1.11.1"
 serde_json = "1.0.138"
 sysinfo = "0.33.1"
